[package]
name = "ssb-client"
version = "0.2.0"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
description = "A client library for interfacing with ssb."
repository = "https://github.com/ssbc/ssb-client-rs"
readme = "README.md"
license = "GPL-3.0"

[features]
default = ["ssb"]
ssb = [] # Core rpcs from https://github.com/ssbc/scuttlebot/blob/master/api.md

[dependencies]
futures = "0.1.17"
ssb-common = "0.2.4"
ssb-rpc = "0.2.0"
muxrpc = "0.2.0"
tokio-io = "0.1.5"
lazy_static = "1.0.0"
serde_json = "1.0.9"
sodiumoxide = "0.0.16"
secret_stream = "0.1.2"
ssb-keyfile = "0.1.2"
tokio = "0.1.1"
box_stream = "0.4.0"
secret_handshake = "3.0.2"
